【file-helper服务添加图片宽高信息解析的接口】 https://www.tapd.cn/34442607/prong/stories/view/1134442607001036113
