# website/routers/default.go
@@ -30,11 +30,11 @@ func AddRouter(r *gin.Engine) *gin.Engine {
 	})
 	fileheler := r.Group(configs.BaseUrl)
 	{
+		fileheler.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
 		fileheler.POST("/Converter/GetFisrtImageByGavingKey", ginoauth2.Auth(AudAndScopeCheck("default", configs.OIDCAudience, configs.OIDCScope), oauth2Enpoint), controllers.GetFisrtImageByGavingKey)
 		fileheler.POST("/Converter/GetPdfByGavingKey", ginoauth2.Auth(AudAndScopeCheck("default", configs.OIDCAudience, configs.OIDCScope), oauth2Enpoint), controllers.GetPdfByGavingKey)
 		fileheler.POST("/Tar/Pack", ginoauth2.Auth(AudAndScopeCheck("default", configs.OIDCAudience, configs.OIDCScope), oauth2Enpoint), controllers.Pack)
-		fileheler.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
-
+		fileheler.POST("/GetImgInfo", ginoauth2.Auth(AudAndScopeCheck("default", configs.OIDCAudience, configs.OIDCScope), oauth2Enpoint), controllers.GetImgInfo)
 	}
 
 	// swagger
